tests/ui/column_leak.stderr
error[E0507]: cannot move out of index of `QueryResult`
 --> tests/ui/column_leak.rs:5:59
  |
5 |     let results: Vec<Column> = stmt.query(())?.map(|r| Ok(r[0])).collect()?;
  |                                                           ^^^^ move occurs because value has type `sqlite3_ext::query::Column`, which does not implement the `Copy` trait
